<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/arrow_back_24"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="@id/searchTIL"
            app:layout_constraintTop_toTopOf="parent"
            />
        <LinearLayout
            android:id="@+id/tvAddress"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/back_arrow"
            android:layout_marginEnd="250dp"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">
        <TextView
        android:id="@+id/delivering_to"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliverinto"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/back_arrow"
        app:layout_constraintTop_toTopOf="@id/back_arrow"
        app:layout_constraintBottom_toTopOf="@id/disteny"
        android:textAlignment="textStart"
        />
        <TextView
        android:id="@+id/disteny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distination"
        android:textStyle="normal"
        android:textColor="@color/mydarkerorange"
        app:layout_constraintTop_toBottomOf="@id/delivering_to"
        app:layout_constraintStart_toEndOf="@id/back_arrow"
        android:textSize="14sp"
        />
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            app:hintTextAppearance="@android:style/TextAppearance.Small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAddress"
            android:id="@+id/searchTIL"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/mydarkerorange"
            android:textColor="@color/black"

            android:layout_width="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:background="@android:color/transparent"
            android:hint="@string/searchStore"
            android:textColorHint="@color/mylightgray"
            android:textSize="13sp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextSearchBox"
                android:layout_marginTop="5dp"
                android:hint="@string/search_hint"
                android:textColor="@color/black"
                android:textColorHint="@color/mylightgray"
                android:inputType="textPersonName|textMultiLine"
                android:maxLines="1"
                android:lines="1"
                android:gravity="top|start"
                android:background="@drawable/bordergray"
                android:drawableStart="@drawable/ic_baseline_search_24"/>
        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:id="@+id/midframe"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            app:layout_constraintStart_toStartOf="@id/searchTIL"
            app:layout_constraintEnd_toEndOf="@id/searchTIL"
            app:layout_constraintTop_toBottomOf="@id/searchTIL"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/middle_frame_border">

            <ImageView
                android:layout_width="109dp"
                android:layout_height="121dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/cristiano_nobg" />

            <ImageView
                android:id="@+id/talab"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:src="@drawable/talabat" />

            <TextView
                android:id="@+id/delivered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/talab"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/deliveredin"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/paragraph"
                android:layout_width="180sp"
                android:layout_height="wrap_content"
                android:layout_below="@id/delivered"
                android:layout_marginStart="10dp"
                android:text="@string/paragraphstr" />

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/shopnow"
                android:layout_height="wrap_content"
                android:layout_below="@id/paragraph"
                android:layout_marginStart="10dp"
                android:text="@string/shopnow"
                android:textColor="@color/mydarkerorange"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:src="@drawable/ic_baseline_arrow_forward_24"
                android:layout_toEndOf="@id/shopnow"
                android:layout_below="@id/paragraph"
                />

        </RelativeLayout>
        <LinearLayout
            android:id="@+id/buttons_linearlayout"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/midframe"
            app:layout_constraintStart_toStartOf="@id/midframe"
            app:layout_constraintEnd_toEndOf="@id/midframe"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:text="@string/leftbotton"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:paddingStart="5dp"
                android:background="@color/lightorange"
                android:textSize="14sp"
                android:drawableEnd="@drawable/ic_coupon_svgrepo_com"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:text="@string/midbutton"
                android:background="@color/lightorange"
                android:layout_weight="1"
                android:textSize="14sp"
                android:gravity="start|center_vertical"
                android:paddingStart="5dp"
                android:drawableEnd="@drawable/ic_heart_svgrepo_com"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rightbutton"
                android:gravity="start|center_vertical"
                android:paddingStart="5dp"
                android:background="@color/lightorange"
                android:textSize="14sp"
                android:drawableEnd="@drawable/ic_clock_svgrepo_com__1_"
                />

        </LinearLayout>
        <TextView
            android:id="@+id/shop_by_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopby"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/buttons_linearlayout"
            app:layout_constraintStart_toStartOf="@id/buttons_linearlayout"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:id="@+id/store_options"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@id/shop_by_textView"
            app:layout_constraintStart_toStartOf="@id/buttons_linearlayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            >

        </FrameLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/store_options"
                app:layout_constraintEnd_toEndOf="@id/store_options"
                app:layout_constraintStart_toStartOf="@id/store_options"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:src="@drawable/talabatt"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/talabatup"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/talabatmid"
                            android:textColor="@color/mylightgray"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/talabatbottom"
                            android:textColor="@color/black"/>
                    </LinearLayout>

            </LinearLayout>

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="144dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/togo"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/togoup"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/togomid"
                        android:textColor="@color/mylightgray"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/togo_bottom"
                        android:textColor="@color/black"/>
                </LinearLayout>

            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="144dp"
                        android:layout_height="130dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/wtnya" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/wataneya"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/togo"
                            android:textColor="@color/mylightgray" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dwagen"
                            android:textColor="@color/black" />
                    </LinearLayout>

                </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</layout>